Changed the way the acquirer url is set and used to support ABN AMRO.
I also added the option of setting the acquirer url(s) by setting a single attribute 'acquirer'.
See the README for more info on this.

Note: remote tests for ABN AMRO are not supported the way they are with Rabobank and ING.
You have to do the tests manually, one by one.

--- a/README.textile
+++ b/README.textile
@@ -90,7 +90,10 @@ h3. First configure the gateway
 Put the following code in, for instance, an initializer:
 
 <pre>
+IdealGateway.acquirer = :ing # Other banks preloaded are :abnamro and :rabobank
+# OR
 IdealGateway.live_url = 'https://ideal.secure-ing.com:443/ideal/iDeal'
+
 IdealGateway.merchant_id = '00123456789'
 IdealGateway.passphrase = 'the_private_key_passphrase'
 
