--- a/README.textile
+++ b/README.textile
@@ -72,12 +72,12 @@ You can run the tests from this gem with (inside the active_merchant_ideal direc
 rake test
 </pre>
 
-h3. Run the remote tests (For ING BANK only)
+h3. Run the remote tests (For ING BANK and Rabobank only)
 
 * Create .active_merchant directory in your own home directory
 * Copy test/fixtures.yml to the .active_merchant directory
 * Fill in your own merchant id, passphrase and the correct locations to your private key and certificates.
-* For running the *seven prescribed remote test transactions* (ING bank) which are needed to activate the iDEAL account use 
+* For running the *seven prescribed remote test transactions* (ING bank and Rabobank) which are needed to activate the iDEAL account use 
 
 <pre>
 rake test:remote
@@ -185,7 +185,7 @@ In 2007 this code was refactored as a patch for the ActiveMerchant library, this
 
 In 2009 Fingertips forked the ActiveMerchant library and added an iDEAL gateway (presumable based on the first ActiveMerchant patch) to a new ideal branch. 
 
-In 2010 this code was extracted and converted into a separate gem, so it can be more easily used in combination with the latest version of ActiveMerchant. This library is just an extraction, nothing more and nothing less. There are no fundamental changes between the code from the ideal branch and the code of this gem. Later that year "Sernin van de Krol":http://github/companeidos added support for ABN AMRO. 
+In 2010 this code was extracted and converted into a separate gem, so it can be more easily used in combination with the latest version of ActiveMerchant. This library is just an extraction, nothing more and nothing less. There are no fundamental changes between the code from the ideal branch and the code of this gem. Later that year "Sernin van de Krol":http://github.com/paneidos added support for ABN AMRO. 
 
 h2. Maintainer
 
